# NotToday

./: .gitignore  .gitlab-ci.yml  NotToday.pro  README.md  main.cpp
Doxygen/html/: annotated.html  class_dashboard-members.html  class_dashboard.html  class_main_window-members.html  class_main_window.html  class_priority_queue-members.html  class_priority_queue.html  class_tab_model-members.html  class_tab_model.html  class_tab_widget-members.html  class_tab_widget.html  class_task-members.html  class_task.html  class_task_dialog-members.html  class_task_dialog.html  class_task_management-members.html  class_task_management.html  class_time_span-members.html  class_time_span.html  class_to_do_list-members.html  class_to_do_list.html  class_utils-members.html  class_utils.html  classes.html  dashboard_8h_source.html  dir_20486dab9f9893461d5524523b13c72e.html  dir_937900b87e0c7a5fa01190c395fb83f7.html  dir_e6d1a915065275a06f0ec3cb542ac4e1.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  mainwindow_8h_source.html  md__r_e_a_d_m_e.html  pages.html  priorityqueue_8h_source.html  recurrence_8h_source.html  struct_ponderated_task-members.html  struct_ponderated_task.html  (+9 more)
Doxygen/html/search/: all_0.js  all_3.js  all_4.js  classes_3.js  classes_4.js  functions_1.js  searchdata.js
Doxygen/latex/: annotated.tex  class_dashboard.eps  class_dashboard.tex  class_main_window.tex  class_priority_queue.tex  class_tab_model.eps  class_tab_model.tex  class_tab_widget.eps  class_tab_widget.tex  class_task.tex  class_task_dialog.eps  class_task_dialog.tex  class_task_management.eps  class_task_management.tex  class_time_span.tex  class_to_do_list.tex  class_utils.tex  dashboard_8h_source.tex  files.tex  hierarchy.tex  mainwindow_8h_source.tex  priorityqueue_8h_source.tex  recurrence_8h_source.tex  refman.tex  struct_ponderated_task.tex  tabmodel_8h_source.tex  tabwidget_8h_source.tex  task_8h_source.tex  taskdialog_8h_source.tex  taskmanagement_8h_source.tex  taskstatus_8h_source.tex  timespan_8h_source.tex  todolist_8h_source.tex  utils_8h_source.tex
Sources/: CMakeLists.txt  Doxyfile  NotToday.pro  main.cpp  test.cpp  tests.cpp
Sources/tools/: CMakeLists.txt  priorityqueue.cpp  priorityqueue.h  task.cpp  task.h  taskstatus.h  timespan.cpp  timespan.h  todolist.cpp  todolist.h  tools_test.cpp  tools_tests.cpp  utils.cpp  utils.h
Sources/widgets/: CMakeLists.txt  dashboard.cpp  dashboard.h  mainwindow.cpp  mainwindow.h  tabmodel.cpp  tabmodel.h  tabwidget.cpp  tabwidget.h  taskdialog.cpp  taskdialog.h  taskmanagement.cpp  taskmanagement.h
docDoxygen/html/: index.html  md__r_e_a_d_m_e.html  pages.html
docDoxygen/html/search/: pages_0.js
tools/: priorityqueue.h  recurrence.h  task.cpp  task.h  taskstatus.h  todolist.cpp  utils.cpp  utils.h
widgets/: dashboard.cpp  dashboard.h  mainwindow.cpp  tabmodel.cpp  tabmodel.h  taskdialog.cpp  taskdialog.h  taskmanagement.cpp  taskmanagement.h
